# pulumi-jinja-templates

./: README.md  pyproject.toml
docs/: .gitignore  index.qmd
pulumi_jinja_templates/: render.py  template.py
pulumi_jinja_templates/local/: template.py
pulumi_jinja_templates/remote/: template.py
tests/test_local/: Pulumi.yaml  __main__.py
tests/test_local/templates/: in.yaml  out.yaml
