[tool.poetry]
name = "pulumi-jinja-templates"
version = "0.1.0"
description = "Render Jinja2 templates with Pulumi"
authors = ["SamEdwardes <edwardes.s@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pulumi_jinja_templates"}]

[tool.poetry.dependencies]
python = "^3.7"
Jinja2 = "^3.1.2"
pulumi-command = "^0.5.2"
pulumi = "^3.42.0"


[tool.poetry.group.dev.dependencies]
rich = "^12.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
